--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <!--Chart.js JS CDN--> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
   </head>
   <body>
+      <h1> Calculez quand vous pourrez devenir rentier !</h1>
 
     <div class="main-container">
         <div class="chart-container-1">
