--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Devenir Rentier</title>
+    <link rel="icon" type="image/x-icon" href="profits.ico">
     <!--Chart.js JS CDN--> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
