--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
 
     <h3 class="salaire">
-        Salaire mensuel = <span class="badge bg-success" id="salaire_id"></span> €
+        Salaire mensuel = <span id="salaire_id"></span> €
     </h3>
     <script src="finance.js"></script>
 
