--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           </div>
 
           <div class="col-sm">
-            <label for="formGroupExampleInput">Rendement</label>
-            <input type="number" id="rendement_id" class="form-control" value = "0.06">
+            <label for="formGroupExampleInput">Rendement&nbsp;(%)</label>
+            <input type="number" id="rendement_id" class="form-control" value = "6">
           </div>
           
           <div class="col-sm">
@@ -79,7 +79,7 @@
       </div>
 
     <h3 class="salaire">
-        Salaire mensuel = <span id="salaire_id"></span> €
+        Salaire mensuel = <span class="badge badge-success" id="salaire_id"></span> €
     </h3>
     <script src="finance.js"></script>
 
