--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6e67505f67.js" crossorigin="anonymous"></script>
   </head>
   <body>
       <h1>Ne travaillez plus !</h1>
@@ -60,11 +61,17 @@
       </div>
 
     <h3 class="salaire">
-        Salaire mensuel = <span class="badge badge-success" id="salaire_id"></span> €
+      &#128200;&nbsp;Salaire&nbsp;mensuel&nbsp;=&nbsp;<span class="badge badge-success" id="salaire_id"></span>&nbsp;€
     </h3>
+    <h3 class="salaire">
+      &#128181;&nbsp;Cash&nbsp;disponible&nbsp;=&nbsp;<span class="badge badge-success" id="argent_id"></span>&nbsp;€
+    </h3>
+    <div style="margin-top: 30px", class="col text-center">
+      <a class="btn btn-primary" style="background-color: #0A66C2;" href="https://www.linkedin.com/in/hugo-antoine" role="button">
+        <i class="fab fa-linkedin me-2"></i> Suis-moi sur Linkedin
+      </a>
+    </div>
     <script src="finance.js"></script>
 
-  
-  
   </body>
 </html>
