--- a/index.html
+++ b/index.html
@@ -66,11 +66,45 @@
     <h3 class="salaire">
       &#128181;&nbsp;Cash&nbsp;disponible&nbsp;=&nbsp;<span class="badge badge-success" id="argent_id"></span>&nbsp;€
     </h3>
+
+    <!-- Ajout des meilleurs dividendes -->
+    <ol style="margin-top: 30px" class="list-group list-group-numbered">
+      <li class="list-group-item d-flex justify-content-between align-items-start">
+        <div class="ms-2 me-auto">
+          <div class="font-weight-bold">MON TOP 3 PERSONNEL</div>
+        </div>
+        <span class="badge badge-info rounded-pill">RENDEMENT</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-start">
+        <div class="ms-2 me-auto">
+          <div class="fw-bold">COFACE</div>
+          Coface est une société d'assurance crédit dont la mission est d'aider les entreprises à se développer en assurant le risque d'insolvabilité de leurs clients, et à prendre les décisions de crédit nécessaires pour renforcer leur capacité à vendre sur leurs marchés nationaux et d'exportation. 
+        </div>
+        <span class="badge badge-success rounded-pill">13.44%</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-start">
+        <div class="ms-2 me-auto">
+          <div class="fw-bold">CREDIT AGRICOLE</div>
+          Le Crédit agricole est le plus grand réseau de banques coopératives et mutualistes au monde.
+        </div>
+        <span class="badge badge-warning rounded-pill">10.04%</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-start">
+        <div class="ms-2 me-auto">
+          <div class="fw-bold">STELLANTIS</div>
+          Stellantis est un groupe automobile multinational franco-italo-américain résultant de la fusion du groupe français Groupe PSA et de Fiat Chrysler Automobiles.
+        </div>
+        <span class="badge badge-warning rounded-pill">8.90%</span>
+      </li>
+    </ol>
+
+    <!-- Linkedin personnel -->
     <div style="margin-top: 30px", class="col text-center">
       <a class="btn btn-primary" style="background-color: #0A66C2;" href="https://www.linkedin.com/in/hugo-antoine" role="button">
         <i class="fab fa-linkedin me-2"></i> Suis-moi sur Linkedin
       </a>
     </div>
+
     <script src="finance.js"></script>
 
   </body>
