--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </h3>
 
     <!-- Ajout des meilleurs dividendes -->
-    <ol style="margin-top: 30px" class="list-group list-group-numbered">
+    <ol class="list-group list-group-numbered dividends">
       <li class="list-group-item d-flex justify-content-between align-items-start">
         <div class="ms-2 me-auto">
           <div class="font-weight-bold">MON TOP 3 PERSONNEL</div>
