--- a/index.html
+++ b/index.html
@@ -73,25 +73,25 @@
         <div class="ms-2 me-auto">
           <div class="font-weight-bold">MON TOP 3 PERSONNEL</div>
         </div>
-        <span class="badge badge-info rounded-pill">RENDEMENT</span>
+        <span class="badge badge-info rounded-pill">RENDEMENT 2022</span>
       </li>
       <li class="list-group-item d-flex justify-content-between align-items-start">
         <div class="ms-2 me-auto">
-          <div class="fw-bold">COFACE</div>
+          <div class="font-weight-bold">COFACE</div>
           Coface est une société d'assurance crédit dont la mission est d'aider les entreprises à se développer en assurant le risque d'insolvabilité de leurs clients, et à prendre les décisions de crédit nécessaires pour renforcer leur capacité à vendre sur leurs marchés nationaux et d'exportation. 
         </div>
         <span class="badge badge-success rounded-pill">13.44%</span>
       </li>
       <li class="list-group-item d-flex justify-content-between align-items-start">
         <div class="ms-2 me-auto">
-          <div class="fw-bold">CREDIT AGRICOLE</div>
+          <div class="font-weight-bold">CREDIT AGRICOLE</div>
           Le Crédit agricole est le plus grand réseau de banques coopératives et mutualistes au monde.
         </div>
         <span class="badge badge-warning rounded-pill">10.04%</span>
       </li>
       <li class="list-group-item d-flex justify-content-between align-items-start">
         <div class="ms-2 me-auto">
-          <div class="fw-bold">STELLANTIS</div>
+          <div class="font-weight-bold">STELLANTIS</div>
           Stellantis est un groupe automobile multinational franco-italo-américain résultant de la fusion du groupe français Groupe PSA et de Fiat Chrysler Automobiles.
         </div>
         <span class="badge badge-warning rounded-pill">8.90%</span>
