--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/6e67505f67.js" crossorigin="anonymous"></script>
   </head>
   <body>
-      <h1>Ne travaillez plus !</h1>
+      <h1>L'indépendance financière</h1>
 
     <div class="main-container">
         <div class="chart-container-1">
@@ -71,29 +71,37 @@
     <ol class="list-group list-group-numbered dividends">
       <li class="list-group-item d-flex justify-content-between align-items-start">
         <div class="ms-2 me-auto">
-          <div class="font-weight-bold">MON TOP 3 PERSONNEL</div>
+          <div class="font-weight-bold">MON TOP 3</div>
         </div>
         <span class="badge badge-info rounded-pill">RENDEMENT 2022</span>
       </li>
       <li class="list-group-item d-flex justify-content-between align-items-start">
-        <div class="ms-2 me-auto">
-          <div class="font-weight-bold">COFACE</div>
-          Coface est une société d'assurance crédit dont la mission est d'aider les entreprises à se développer en assurant le risque d'insolvabilité de leurs clients, et à prendre les décisions de crédit nécessaires pour renforcer leur capacité à vendre sur leurs marchés nationaux et d'exportation. 
-        </div>
+        <a style="text-decoration: none; color:black" href="https://www.boursorama.com/cours/1rPCOFA/" target="_blank">
+          <div class="ms-2 me-auto">
+            <div class="font-weight-bold">COFACE</div>
+            Coface est une société d'assurance crédit dont la mission est d'aider les entreprises à se développer en assurant le risque d'insolvabilité de leurs clients, et à prendre les décisions de crédit nécessaires pour renforcer leur capacité à vendre sur leurs marchés nationaux et d'exportation. 
+          </div>
+        </a>
         <span class="badge badge-success rounded-pill">13.44%</span>
       </li>
+
       <li class="list-group-item d-flex justify-content-between align-items-start">
-        <div class="ms-2 me-auto">
-          <div class="font-weight-bold">CREDIT AGRICOLE</div>
-          Le Crédit agricole est le plus grand réseau de banques coopératives et mutualistes au monde.
-        </div>
+        <a style="text-decoration: none; color:black" href="https://www.boursorama.com/cours/1rPACA/" target="_blank">
+          <div class="ms-2 me-auto">
+            <div class="font-weight-bold">CREDIT AGRICOLE</div>
+            Le Crédit agricole est le plus grand réseau de banques coopératives et mutualistes au monde.
+          </div>
+        </a>
         <span class="badge badge-warning rounded-pill">10.04%</span>
       </li>
+
       <li class="list-group-item d-flex justify-content-between align-items-start">
-        <div class="ms-2 me-auto">
-          <div class="font-weight-bold">STELLANTIS</div>
-          Stellantis est un groupe automobile multinational franco-italo-américain résultant de la fusion du groupe français Groupe PSA et de Fiat Chrysler Automobiles.
-        </div>
+        <a style="text-decoration: none; color:black" href="https://www.boursorama.com/cours/1rPSTLA/" target="_blank">
+          <div class="ms-2 me-auto">
+            <div class="font-weight-bold">STELLANTIS</div>
+            Stellantis est un groupe automobile multinational franco-italo-américain résultant de la fusion du groupe français Groupe PSA et de Fiat Chrysler Automobiles.
+          </div>
+        </a>
         <span class="badge badge-warning rounded-pill">8.90%</span>
       </li>
     </ol>
